feat(emission-factors): new battery and hydro discharge factors for 2025

--- a/config/zones/AU-WA.yaml
+++ b/config/zones/AU-WA.yaml
@@ -75,31 +75,39 @@ emissionFactors:
   direct:
     battery discharge:
     - _comment: used storage values greater than zero.
-      datetime: '2024-01-01'
-      source: Electricity Maps, 2024 zone average
-      value: 303.78
+      datetime: '2020-01-01'
+      source: Electricity Maps, 2020 zone average
+      value: 288.89
     - _comment: used storage values greater than zero.
       datetime: '2023-01-01'
       source: Electricity Maps, 2023 zone average
       value: 310.98
     - _comment: used storage values greater than zero.
-      datetime: '2020-01-01'
-      source: Electricity Maps, 2020 zone average
-      value: 288.89
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 303.78
+    - _comment: used storage values greater than zero.
+      datetime: '2025-01-01'
+      source: Electricity Maps, 2025 zone average
+      value: 281.74
   lifecycle:
     battery discharge:
     - _comment: used storage values greater than zero.
-      datetime: '2024-01-01'
-      source: Electricity Maps, 2024 zone average
-      value: 368.61
+      datetime: '2020-01-01'
+      source: Electricity Maps, 2020 zone average
+      value: 348.67
     - _comment: used storage values greater than zero.
       datetime: '2023-01-01'
       source: Electricity Maps, 2023 zone average
       value: 374.21
     - _comment: used storage values greater than zero.
-      datetime: '2020-01-01'
-      source: Electricity Maps, 2020 zone average
-      value: 348.67
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 368.61
+    - _comment: used storage values greater than zero.
+      datetime: '2025-01-01'
+      source: Electricity Maps, 2025 zone average
+      value: 344.39
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2015 average
