--- a/config/zones/FR-COR.yaml
+++ b/config/zones/FR-COR.yaml
@@ -23,13 +23,17 @@ emissionFactors:
   direct:
     battery discharge:
     - _comment: used storage values greater than zero.
+      datetime: '2023-01-01'
+      source: Electricity Maps, 2023 zone average
+      value: 320.8
+    - _comment: used storage values greater than zero.
       datetime: '2024-01-01'
       source: Electricity Maps, 2024 zone average
       value: 370.72
     - _comment: used storage values greater than zero.
-      datetime: '2023-01-01'
-      source: Electricity Maps, 2023 zone average
-      value: 320.8
+      datetime: '2025-01-01'
+      source: Electricity Maps, 2025 zone average
+      value: 384.06
     biomass:
       datetime: '2021-01-01'
       source: BEIS 2021
@@ -76,13 +80,17 @@ emissionFactors:
   lifecycle:
     battery discharge:
     - _comment: used storage values greater than zero.
+      datetime: '2023-01-01'
+      source: Electricity Maps, 2023 zone average
+      value: 424.88
+    - _comment: used storage values greater than zero.
       datetime: '2024-01-01'
       source: Electricity Maps, 2024 zone average
       value: 480.4
     - _comment: used storage values greater than zero.
-      datetime: '2023-01-01'
-      source: Electricity Maps, 2023 zone average
-      value: 424.88
+      datetime: '2025-01-01'
+      source: Electricity Maps, 2025 zone average
+      value: 519.63
     biomass:
       datetime: '2014-01-01'
       source: BEIS 2021; IPCC 2014
