--- a/config/zones/RO.yaml
+++ b/config/zones/RO.yaml
@@ -176,6 +176,11 @@ delays:
   production: 6
 emissionFactors:
   direct:
+    battery discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2025-01-01'
+      source: Electricity Maps, 2025 zone average
+      value: 285.65
     biomass:
       datetime: '2021-01-01'
       source: BEIS 2021
@@ -220,6 +225,11 @@ emissionFactors:
       source: EU-ETS, ENTSO-E 2024
       value: 889.87
   lifecycle:
+    battery discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2025-01-01'
+      source: Electricity Maps, 2025 zone average
+      value: 328.35
     biomass:
       datetime: '2014-01-01'
       source: BEIS 2021; IPCC 2014
