--- a/config/zones/US-FLA-FPL.yaml
+++ b/config/zones/US-FLA-FPL.yaml
@@ -212,6 +212,11 @@ delays:
   production: 48
 emissionFactors:
   direct:
+    battery discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2025-01-01'
+      source: Electricity Maps, 2025 zone average
+      value: 247.04
     biomass:
     - datetime: '2020-01-01'
       source: BEIS 2021
@@ -286,6 +291,11 @@ emissionFactors:
       source: eGrid 2023
       value: 175.09320207293555
   lifecycle:
+    battery discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2025-01-01'
+      source: Electricity Maps, 2025 zone average
+      value: 324.51
     biomass:
     - _comment: Mean of all US zones
       datetime: '2020-01-01'
