--- a/config/zones/JP-TK.yaml
+++ b/config/zones/JP-TK.yaml
@@ -22,6 +22,19 @@ country_name: Japan
 currency: JPY
 delays:
   production: 5
+emissionFactors:
+  direct:
+    hydro discharge:
+    - _comment: used storage values equal to zero.
+      datetime: '2025-01-01'
+      source: Electricity Maps, 2025 zone average
+      value: 497.47
+  lifecycle:
+    hydro discharge:
+    - _comment: used storage values equal to zero.
+      datetime: '2025-01-01'
+      source: Electricity Maps, 2025 zone average
+      value: 592.73
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2015 average
