--- a/config/zones/NO-NO2.yaml
+++ b/config/zones/NO-NO2.yaml
@@ -95,21 +95,25 @@ emissionFactors:
       value: 0.0
     hydro discharge:
     - _comment: used storage values equal to zero.
-      datetime: '2024-01-01'
-      source: Electricity Maps, 2024 zone average
-      value: 10.23
+      datetime: '2021-01-01'
+      source: Electricity Maps, 2021 zone average
+      value: 15.52
+    - _comment: used storage values equal to zero.
+      datetime: '2022-01-01'
+      source: Electricity Maps, 2022 zone average
+      value: 26.36
     - _comment: used storage values greater than zero.
       datetime: '2023-01-01'
       source: Electricity Maps, 2023 zone average
       value: 51.77
     - _comment: used storage values equal to zero.
-      datetime: '2022-01-01'
-      source: Electricity Maps, 2022 zone average
-      value: 26.36
-    - _comment: used storage values equal to zero.
-      datetime: '2021-01-01'
-      source: Electricity Maps, 2021 zone average
-      value: 15.52
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 10.23
+    - _comment: used storage values greater than zero.
+      datetime: '2025-01-01'
+      source: Electricity Maps, 2025 zone average
+      value: 5.58
   lifecycle:
     biomass:
       datetime: '2014-01-01'
@@ -121,21 +125,25 @@ emissionFactors:
       value: 490.0
     hydro discharge:
     - _comment: used storage values equal to zero.
-      datetime: '2024-01-01'
-      source: Electricity Maps, 2024 zone average
-      value: 36.45
+      datetime: '2021-01-01'
+      source: Electricity Maps, 2021 zone average
+      value: 41.74
+    - _comment: used storage values equal to zero.
+      datetime: '2022-01-01'
+      source: Electricity Maps, 2022 zone average
+      value: 55.1
     - _comment: used storage values greater than zero.
       datetime: '2023-01-01'
       source: Electricity Maps, 2023 zone average
       value: 86.67
     - _comment: used storage values equal to zero.
-      datetime: '2022-01-01'
-      source: Electricity Maps, 2022 zone average
-      value: 55.1
-    - _comment: used storage values equal to zero.
-      datetime: '2021-01-01'
-      source: Electricity Maps, 2021 zone average
-      value: 41.74
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 36.45
+    - _comment: used storage values greater than zero.
+      datetime: '2025-01-01'
+      source: Electricity Maps, 2025 zone average
+      value: 29.54
     oil:
       datetime: '2014-01-01'
       source: EIA 2020/BEIS 2021; IPCC 2014
