--- a/config/zones/NO-NO5.yaml
+++ b/config/zones/NO-NO5.yaml
@@ -80,25 +80,29 @@ emissionFactors:
       value: 0.0
     hydro discharge:
     - _comment: used storage values equal to zero.
-      datetime: '2024-01-01'
-      source: Electricity Maps, 2024 zone average
-      value: 0.82
-    - _comment: used storage values equal to zero.
-      datetime: '2023-01-01'
-      source: Electricity Maps, 2023 zone average
-      value: 0.64
-    - _comment: used storage values equal to zero.
-      datetime: '2022-01-01'
-      source: Electricity Maps, 2022 zone average
-      value: 1.94
+      datetime: '2020-01-01'
+      source: Electricity Maps, 2020 zone average
+      value: 10.07
     - _comment: used storage values equal to zero.
       datetime: '2021-01-01'
       source: Electricity Maps, 2021 zone average
       value: 12.82
     - _comment: used storage values equal to zero.
-      datetime: '2020-01-01'
-      source: Electricity Maps, 2020 zone average
-      value: 10.07
+      datetime: '2022-01-01'
+      source: Electricity Maps, 2022 zone average
+      value: 1.94
+    - _comment: used storage values equal to zero.
+      datetime: '2023-01-01'
+      source: Electricity Maps, 2023 zone average
+      value: 0.64
+    - _comment: used storage values equal to zero.
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 0.82
+    - _comment: used storage values greater than zero.
+      datetime: '2025-01-01'
+      source: Electricity Maps, 2025 zone average
+      value: 1.21
   lifecycle:
     biomass:
       datetime: '2014-01-01'
@@ -110,25 +114,29 @@ emissionFactors:
       value: 490.0
     hydro discharge:
     - _comment: used storage values equal to zero.
-      datetime: '2024-01-01'
-      source: Electricity Maps, 2024 zone average
-      value: 25.98
-    - _comment: used storage values equal to zero.
-      datetime: '2023-01-01'
-      source: Electricity Maps, 2023 zone average
-      value: 25.87
-    - _comment: used storage values equal to zero.
-      datetime: '2022-01-01'
-      source: Electricity Maps, 2022 zone average
-      value: 27.11
+      datetime: '2020-01-01'
+      source: Electricity Maps, 2020 zone average
+      value: 37.42
     - _comment: used storage values equal to zero.
       datetime: '2021-01-01'
       source: Electricity Maps, 2021 zone average
       value: 41.5
     - _comment: used storage values equal to zero.
-      datetime: '2020-01-01'
-      source: Electricity Maps, 2020 zone average
-      value: 37.42
+      datetime: '2022-01-01'
+      source: Electricity Maps, 2022 zone average
+      value: 27.11
+    - _comment: used storage values equal to zero.
+      datetime: '2023-01-01'
+      source: Electricity Maps, 2023 zone average
+      value: 25.87
+    - _comment: used storage values equal to zero.
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 25.98
+    - _comment: used storage values greater than zero.
+      datetime: '2025-01-01'
+      source: Electricity Maps, 2025 zone average
+      value: 26.01
     oil:
       datetime: '2014-01-01'
       source: EIA 2020/BEIS 2021; IPCC 2014
