--- a/config/zones/US-MIDW-MISO.yaml
+++ b/config/zones/US-MIDW-MISO.yaml
@@ -1228,6 +1228,11 @@ delays:
   production: 48
 emissionFactors:
   direct:
+    battery discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2025-01-01'
+      source: Electricity Maps, 2025 zone average
+      value: 426.81
     biomass:
     - datetime: '2020-01-01'
       source: BEIS 2021
@@ -1298,6 +1303,11 @@ emissionFactors:
       source: eGrid 2023
       value: 78.97966175586572
   lifecycle:
+    battery discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2025-01-01'
+      source: Electricity Maps, 2025 zone average
+      value: 491.68
     biomass:
     - _comment: Mean of all US zones
       datetime: '2020-01-01'
