--- a/config/zones/US-SE-SOCO.yaml
+++ b/config/zones/US-SE-SOCO.yaml
@@ -465,6 +465,11 @@ delays:
   production: 48
 emissionFactors:
   direct:
+    battery discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2025-01-01'
+      source: Electricity Maps, 2025 zone average
+      value: 341.71
     biomass:
     - datetime: '2020-01-01'
       source: BEIS 2021
@@ -521,6 +526,11 @@ emissionFactors:
       datetime: '2023-01-01'
       source: eGrid 2023
       value: 28.739435464835893
+    hydro discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2025-01-01'
+      source: Electricity Maps, 2025 zone average
+      value: 343.44
     oil:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -535,6 +545,11 @@ emissionFactors:
       source: eGrid 2023
       value: 249.87130843532887
   lifecycle:
+    battery discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2025-01-01'
+      source: Electricity Maps, 2025 zone average
+      value: 418.7
     biomass:
     - _comment: Mean of all US zones
       datetime: '2020-01-01'
@@ -595,6 +610,11 @@ emissionFactors:
       datetime: '2023-01-01'
       source: eGrid 2023; IPCC 2014
       value: 66.73943546483589
+    hydro discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2025-01-01'
+      source: Electricity Maps, 2025 zone average
+      value: 420.3
     oil:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
