--- a/config/zones/US-TEN-TVA.yaml
+++ b/config/zones/US-TEN-TVA.yaml
@@ -277,6 +277,10 @@ emissionFactors:
       datetime: '2024-01-01'
       source: Electricity Maps, 2024 zone average
       value: 359.56
+    - _comment: used storage values equal to zero.
+      datetime: '2025-01-01'
+      source: Electricity Maps, 2025 zone average
+      value: 329.03
     biomass:
     - datetime: '2020-01-01'
       source: BEIS 2021
@@ -335,21 +339,25 @@ emissionFactors:
       value: 28.739435464835893
     hydro discharge:
     - _comment: used storage values greater than zero.
-      datetime: '2024-01-01'
-      source: Electricity Maps, 2024 zone average
-      value: 358.39
-    - _comment: used storage values greater than zero.
-      datetime: '2023-01-01'
-      source: Electricity Maps, 2023 zone average
-      value: 317.35
+      datetime: '2021-01-01'
+      source: Electricity Maps, 2021 zone average
+      value: 331.87
     - _comment: used storage values greater than zero.
       datetime: '2022-01-01'
       source: Electricity Maps, 2022 zone average
       value: 359.83
     - _comment: used storage values greater than zero.
-      datetime: '2021-01-01'
-      source: Electricity Maps, 2021 zone average
-      value: 331.87
+      datetime: '2023-01-01'
+      source: Electricity Maps, 2023 zone average
+      value: 317.35
+    - _comment: used storage values greater than zero.
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 358.39
+    - _comment: used storage values greater than zero.
+      datetime: '2025-01-01'
+      source: Electricity Maps, 2025 zone average
+      value: 332.83
     oil:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -372,6 +380,10 @@ emissionFactors:
       datetime: '2024-01-01'
       source: Electricity Maps, 2024 zone average
       value: 430.72
+    - _comment: used storage values equal to zero.
+      datetime: '2025-01-01'
+      source: Electricity Maps, 2025 zone average
+      value: 390.44
     biomass:
     - _comment: Mean of all US zones
       datetime: '2020-01-01'
@@ -434,21 +446,25 @@ emissionFactors:
       value: 66.73943546483589
     hydro discharge:
     - _comment: used storage values greater than zero.
-      datetime: '2024-01-01'
-      source: Electricity Maps, 2024 zone average
-      value: 428.8
-    - _comment: used storage values greater than zero.
-      datetime: '2023-01-01'
-      source: Electricity Maps, 2023 zone average
-      value: 375.82
+      datetime: '2021-01-01'
+      source: Electricity Maps, 2021 zone average
+      value: 390.47
     - _comment: used storage values greater than zero.
       datetime: '2022-01-01'
       source: Electricity Maps, 2022 zone average
       value: 422.98
     - _comment: used storage values greater than zero.
-      datetime: '2021-01-01'
-      source: Electricity Maps, 2021 zone average
-      value: 390.47
+      datetime: '2023-01-01'
+      source: Electricity Maps, 2023 zone average
+      value: 375.82
+    - _comment: used storage values greater than zero.
+      datetime: '2024-01-01'
+      source: Electricity Maps, 2024 zone average
+      value: 428.8
+    - _comment: used storage values greater than zero.
+      datetime: '2025-01-01'
+      source: Electricity Maps, 2025 zone average
+      value: 394.55
     oil:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
