Revert "feat(emission-factors): new battery and hydro discharge factors for 2020-2023 (#8569)"
This reverts commit 8ecf9a0c8918349f09221ffe7d44fcade1f13cf6.

--- a/config/zones/JP-CG.yaml
+++ b/config/zones/JP-CG.yaml
@@ -25,18 +25,7 @@ currency: JPY
 delays:
   production: 5
 emissionFactors:
-  direct:
-    hydro discharge:
-    - _comment: used storage values equal to zero.
-      datetime: '2020-01-01'
-      source: Electricity Maps, 2020 zone average
-      value: 419.3
-  lifecycle:
-    hydro discharge:
-    - _comment: used storage values equal to zero.
-      datetime: '2020-01-01'
-      source: Electricity Maps, 2020 zone average
-      value: 509.31
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2017 average
