--- a/config/zones/JP-ON.yaml
+++ b/config/zones/JP-ON.yaml
@@ -23,26 +23,7 @@ currency: JPY
 delays:
   production: 5
 emissionFactors:
-  direct:
-    hydro discharge:
-    - _comment: used storage values equal to zero.
-      datetime: '2021-01-01'
-      source: Electricity Maps, 2021 zone average
-      value: 492.75
-    - _comment: used storage values equal to zero.
-      datetime: '2020-01-01'
-      source: Electricity Maps, 2020 zone average
-      value: 500.06
-  lifecycle:
-    hydro discharge:
-    - _comment: used storage values equal to zero.
-      datetime: '2021-01-01'
-      source: Electricity Maps, 2021 zone average
-      value: 589.1
-    - _comment: used storage values equal to zero.
-      datetime: '2020-01-01'
-      source: Electricity Maps, 2020 zone average
-      value: 597.17
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2017 average
