Changing has_day_ahead_price_license to True

--- a/config/zones/DK.yaml
+++ b/config/zones/DK.yaml
@@ -309,7 +309,7 @@ fallbackZoneMixes:
         wind: 0.42361865325317705
 
 hide_day_ahead_price: False
-has_day_ahead_price_license: False
+has_day_ahead_price_license: True
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
