--- a/config/zones/NO.yaml
+++ b/config/zones/NO.yaml
@@ -302,7 +302,7 @@ fallbackZoneMixes:
         wind: 0.12701186508811527
 
 hide_day_ahead_price: False
-has_day_ahead_price_license: False
+has_day_ahead_price_license: True
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
