manually deduplicate yaml files

--- a/config/zones/CA-QC.yaml
+++ b/config/zones/CA-QC.yaml
@@ -183,4 +183,4 @@ parsers:
   production: CA_QC.fetch_production
 region: Americas
 timezone: America/Toronto
-zone_name: "Québec"
+zone_name: 'Québec'
