--- a/config/zones/CL-SEN.yaml
+++ b/config/zones/CL-SEN.yaml
@@ -251,4 +251,4 @@ sources:
   Electricity Maps, CEN:
     link: https://docs.google.com/spreadsheets/d/1-iXUGhAM_9Ft5ejlNVxaqaAwG8Octh3gSjU-dm4e96o/edit#gid=163148677 (average thermoelectric emission factors)
 timezone: America/Santiago
-zone_name: "Sistema Eléctrico Nacional"
+zone_name: 'Sistema Eléctrico Nacional'
