--- a/config/zones/JP-CB.yaml
+++ b/config/zones/JP-CB.yaml
@@ -180,4 +180,4 @@ sources:
   Chubu Electric Power 2022:
     link: https://www.chuden.co.jp/corporate/publicity/datalist/juyo/dat_kousei/index.html
 timezone: Asia/Tokyo
-zone_name: "Chūbu"
+zone_name: 'Chūbu'
