--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -496,14 +496,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v6
       - name: Install uv
-        uses: astral-sh/setup-uv@v5
+        uses: astral-sh/setup-uv@v7
         with:
           enable-cache: true
           cache-suffix: 'formatting'
-      - name: Setup Python
-        uses: actions/setup-python@v6
-        with:
-          python-version-file: '.python-version'
+          # UV will setup the correct python version based on .python-version automatically
       - name: Install Dependencies
         run: |
           uv sync --group parsers
@@ -530,13 +527,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v6
       - name: Install uv
-        uses: astral-sh/setup-uv@v5
+        uses: astral-sh/setup-uv@v7
         with:
           enable-cache: true
           cache-suffix: 'tests'
-      - name: Setup Python
-        uses: actions/setup-python@v6
-        with:
           python-version: ${{ matrix.python-version }}
       - name: Install libxml2-dev and tesseract-ocr
         run: |
