--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -500,7 +500,8 @@ jobs:
         with:
           enable-cache: true
           cache-suffix: 'formatting'
-          # UV will setup the correct python version based on .python-version automatically
+          python-version: '3.10'
+          cache-python: true
       - name: Install Dependencies
         run: |
           uv sync --group parsers
@@ -532,6 +533,7 @@ jobs:
           enable-cache: true
           cache-suffix: 'tests'
           python-version: ${{ matrix.python-version }}
+          cache-python: true
       - name: Install libxml2-dev and tesseract-ocr
         run: |
           sudo apt-get update
