--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,23 +1,13 @@
 {
   "name": "Electricity Maps Dev",
-  "image": "mcr.microsoft.com/devcontainers/universal:2",
-  "features": {
-    "ghcr.io/devcontainers/features/python:1": {
-      "version": "3.10"
-    },
-    "ghcr.io/devcontainers/features/node:1": {
-      "version": "lts"
-    },
-    "ghcr.io/devcontainers-contrib/features/poetry:2": {},
-    "ghcr.io/devcontainers-contrib/features/pnpm:2": {}
-  },
+  "image": "mcr.microsoft.com/devcontainers/python:1-3.10-bookworm",
+  "postCreateCommand": "pip install uv && uv sync",
   "customizations": {
     "vscode": {
       "extensions": [
         "ms-python.vscode-pylance",
         "ms-python.python",
         "esbenp.prettier-vscode",
-        "dbaeumer.vscode-eslint",
         "redhat.vscode-yaml",
         "charliermarsh.ruff"
       ]
