--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,13 @@
 {
   "name": "Electricity Maps Dev",
   "image": "mcr.microsoft.com/devcontainers/python:1-3.10-bookworm",
-  "postCreateCommand": "pip install uv && uv sync",
+  "features": {
+    "ghcr.io/devcontainers/features/python:1": {
+      "version": "3.10"
+    },
+    "ghcr.io/devcontainer-community/devcontainer-features/astral.sh-uv:1": {}
+  },
+  "postCreateCommand": "uv sync --group parser --group dev --group scripts",
   "customizations": {
     "vscode": {
       "extensions": [
